# unitree_g1_right.arm_dex3_control

./: .gitignore  .windsurfrules  BUILD_NEW_MACHINE.md  CLAUDE.md  Dex-3灵巧手调试.md  LICENSE  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: CONCERNS.md  INTEGRATIONS.md  STRUCTURE.md  TESTING.md
.planning/debug/: 08-uat-5of8.md
.planning/debug/resolved/: 08-uat-5of8.md
.planning/phases/01-right-arm-only-planner/: 01-04-PLAN.md  01-04-SUMMARY.md  01-05-SUMMARY.md  01-07-SUMMARY.md  01-08-SUMMARY.md  01-11-PLAN.md  01-11-SUMMARY.md  01-12-SUMMARY.md  01-DEBUG-HISTORY-CN.md
.planning/phases/06-yolo-tcp-offset/: 06-02-PLAN.md  06-PATTERNS.md
.planning/phases/08-adaptive-orientation/: 08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-RESEARCH.md  08-UAT.md  08-VERIFICATION.md
.planning/phases/09-apriltag-reach/: 09-03-SUMMARY.md  09-04-SUMMARY.md  09-HUMAN-UAT.md  09-REVIEW.md
.planning/quick/260430-fxj-tcp-torso-link/: 260430-fxj-SUMMARY.md
log/: latest_build
src/unitree_g1_dex3_stack-main/: CMakeLists.txt  README.md  package.xml
src/unitree_g1_dex3_stack-main/config/: apriltag.yaml  v4l2_apriltag_trigger.yaml
src/unitree_g1_dex3_stack-main/launch/: apriltag.launch.py  apriltag_reach.launch.py  planner.launch.py  robot.launch.py
src/unitree_g1_dex3_stack-main/scripts/: apriltag_detector_node.py  apriltag_goal_bridge.py  apriltag_reach_uat.py  gravity_torque_publisher.py  read_tcp_pose.py  tcp_torso_pose.py  v4l2_apriltag_trigger.py
src/unitree_g1_dex3_stack-main/src/: ik_fcl_ompl_planner.cpp  joint_trajectory_executor.cpp
unitree_dex3/: .gitignore  info  right_arm_mode.py  test_button_ocr.py
unitree_dex3/.planning/: PROJECT.md
unitree_dex3/.planning/codebase/: ARCHITECTURE.md  CONVENTIONS.md  STACK.md
unitree_dex3/.planning/debug/resolved/: click-realsense-warnings.md  yolo-pelvis-coord-drift.md
unitree_dex3/.planning/phases/01-right-arm-only-planner/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-05-PLAN.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-08-PLAN.md  01-09-PLAN.md  01-09-SUMMARY.md  01-10-PLAN.md  01-10-SUMMARY.md  01-12-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md
unitree_dex3/.planning/phases/02-path-simplification-quality/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md
unitree_dex3/.planning/phases/03-trajectory-smoothing-validation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md
unitree_dex3/.planning/phases/04-right-arm-only-executor/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VERIFICATION.md
unitree_dex3/.planning/phases/05-end-to-end-integration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md
unitree_dex3/.planning/phases/06-yolo-tcp-offset/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-VERIFICATION.md
unitree_dex3/.planning/phases/07-apriltag/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-PATTERNS.md  07-RESEARCH.md  07-VERIFICATION.md
unitree_dex3/.planning/phases/08-adaptive-orientation/: 08-01-PLAN.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-PATTERNS.md  08-VALIDATION.md
unitree_dex3/.planning/phases/09-apriltag-reach/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-04-PLAN.md  09-04-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-PATTERNS.md  09-RESEARCH.md  09-VALIDATION.md  09-VERIFICATION.md
unitree_dex3/.planning/quick/260430-fxj-tcp-torso-link/: 260430-fxj-CONTEXT.md  260430-fxj-PLAN.md
unitree_dex3/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
unitree_dex3/.planning/todos/pending/: ORI-02-multi-candidate-orientation.md
unitree_dex3/data/: calibration_data.csv  calibration_data_backup_0521.csv  calibration_report.txt  calibration_result.yaml  kdl_tau_calibration.txt
unitree_dex3/scripts/: calibrate_kdl_tau.py  gravity_calibration_collect.py  gravity_calibration_manual.py  gravity_calibration_solve.py  print_arm_tau.py  test_arm_move.py  update_urdf_inertials.py
unitree_dex3/src/unitree_g1_dex3_stack-main/: CMakeLists.txt  README.md  package.xml
unitree_dex3/src/unitree_g1_dex3_stack-main/config/: apriltag.yaml  apriltag_button_press.yaml  v4l2_apriltag_trigger.yaml
unitree_dex3/src/unitree_g1_dex3_stack-main/docs/: ARCHITECTURE.md
unitree_dex3/src/unitree_g1_dex3_stack-main/include/: g1_dex3_joint_defs.hpp
unitree_dex3/src/unitree_g1_dex3_stack-main/launch/: apriltag.launch.py  apriltag_button_press.launch.py  apriltag_reach.launch.py  control.launch.py  planner.launch.py  reach.launch.py
unitree_dex3/src/unitree_g1_dex3_stack-main/robots/g1_description/: collision_trimesh.py  g1_29dof_lock_waist_with_hand_rev_1_0.urdf  g1_29dof_lock_waist_with_hand_rev_1_0_collision_primitives.urdf  g1_29dof_with_hand_rev_1_0.urdf
unitree_dex3/src/unitree_g1_dex3_stack-main/rviz_config/: robot.rviz
unitree_dex3/src/unitree_g1_dex3_stack-main/scripts/: adaptive_orientation_ab.py  apriltag_button_press_node.py  apriltag_detector_node.py  apriltag_goal_bridge.py  apriltag_reach_uat.py  gravity_torque_publisher.py  tcp_torso_pose.py  v4l2_apriltag_trigger.py
unitree_dex3/src/unitree_g1_dex3_stack-main/src/: dex3_controller.cpp  ik_fcl_ompl_planner.cpp  joint_state_publisher.cpp  joint_trajectory_executor.cpp  right_hand_pressure_monitor.cpp  visual_detection_tester.cpp
